# emoji_footballer_goals

./: .gitignore  README.md  pyproject.toml
tests/: main.py
