[tool.poetry]
name = "emoji-footballer-goals"
version = "0.1.0"
description = ""
authors = ["arielperezti <ariel.perez.ti@gmail.com>"]
readme = "README.md"
packages = [{include = "emoji_footballer_goals"}]

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
